# quic-iot-gw

./: .gitignore  Makefile  README.md  client-proxy.py  context.py  docker-compose.simulation-tls.yaml  docker-compose.simulation.yaml  gateway.py  iot_protocols.py  mqtt_sn.py  mqtt_sn_gateway.py  pyproject.toml  qig_client.py  qig_server.py  requirements.txt  sensor_dashboard.py  server-proxy.py  setup.py  test_client.py  test_server.py  transport.py
coap/: proxy.py  transport.py
demo/: Dockerfile-dc  Dockerfile-ds  coap_client.py  coap_server.py  dashboard.py  entrypoint-dc.sh  entrypoint-ds.sh  mqtt_pub.py  mqtt_sn.py  mqtt_sn_client.py  mqtt_sub.py
extras/: mqtt-sn-client.Dockerfile  qig.Dockerfile
mqtt_sn/: gateway.py  message.py
pairs/: client.py  coap_server.py  mqtt_sn_client.py
qig/: __init__.py  context.py  gateway.py
qig/scripts/: qig_client.py  qig_server.py
quic_iot_gateway.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/quic_iot_gateway/: __init__.py  context.py  gateway.py  mqtt_sn.py  transport.py  utils.py
src/quic_iot_gateway.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/quic_iot_gateway/scripts/: coap_client.py  coap_server.py  mqtt_sn_client.py  qig_client.py  qig_server.py  tig_client.py  tig_server.py
src/quic_iot_gateway/tcp/: gateway.py  transport.py
tests/: core.sh  loss_tests.sh  num_clients_tests.sh  rtt_vs_loss.sh  rtt_vs_num_clients.sh  test_coap.py  test_mqtt_sn.py
tests/certs/: cert.pem  key.pem
tests/config/: client.ini  server.ini
(+2 files in other folders)
